# mrkrpc

./: .gitignore  COPYING  README.md  configure.ac  do-it  setup-env
src/: Makefile.am  diag.txt  mrkrpc.c  mrkrpc.h  mrkrpc_private.h
src/test/: Makefile.am  testfoo.c
